Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50516

QQuickItem::nextItemInFocusChain() ends up in infinite loop when isTabFence is set to true on the item

XMLWordPrintable

    • d68a7e04f2a0c01e087190a6171e7c37ffb0359d a1f0e69d162e9d6e1841b7a1e91dcca5e1109373

      This happens on a QQuickItem that has no child Items that would be focusable using Tab/Backtab, and isTabFence is set to true. The nextItemInFocusChain() has been called programatically to find out whether the Item has any key navigation focusable child element.

        For Gerrit Dashboard: QTBUG-50516
        # Subject Branch Project Status CR V

            liaqi Liang Qi
            jombi Zsombor Egri
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes