QQuickItem: fix an infinite loop nextItemInFocusChain()

When isTabFence is set to true and no children.

Task-number: QTBUG-50516
Change-Id: I8430336fde7ab041797f8f9d9dfe5b9d56fecddd
Reviewed-by: J-P Nurmi <jpnurmi@theqtcompany.com>